# pennylane-support

./: README.md  instructions.md
backend/: README.md  pyproject.toml
backend/scripts/: generate_openapi.py  load_db.py
backend/src/pennylane_support/: app.py  dependencies.py  main.py  openapi.json
backend/src/pennylane_support/db/: base.py
backend/src/pennylane_support/models/: challenge.py  conversation.py  responses.py  user.py
backend/src/pennylane_support/routers/: challenges.py  conversations.py  user.py
backend/tests/: test_api.py
backend/tests/services/summarization/: test_summarizer.py
frontend/: README.md  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/api/: client.ts
frontend/src/api/openapi/: schema.d.ts  types.ts
frontend/src/components/: ChallengeDetail.tsx  ChallengeList.tsx  ConversationDetail.tsx  ConversationsList.tsx
